// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy;

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

// The details of requisition used in a computation.
message RequisitionDetails {
  // X.509 certificate in DER format which can be verified using the
  // `DataProvider`'s root certificate. Required. Immutable.
  bytes data_provider_certificate = 1;
  // SHA256 hash of encrypted `RequisitionSpec` from public API. Required.
  // Immutable.
  bytes requisition_spec_hash = 2;
  // Cryptographic digital signature of the "requisition fingerprint" which
  // can be verified using `data_provider_certificate`. Set when `state` is
  // `FULFILLED`.
  //
  // The requisition fingerprint is defined as the concatenation of:
  // 1. `requisition_spec_hash`
  // 2. The SHA256 hash of the concatenation of `data_provider_list` and
  //    `data_provider_list_salt` from the parent `Computation`.
  // 3. `measurement_spec` from the parent `Computation`.
  bytes data_provider_participation_signature = 3;
  // External ID of the duchy where this requisition is fulfilled.
  string external_fulfilling_duchy_id = 4;
}
